--- a/VSPackage_UnitTests/packages.config
+++ b/VSPackage_UnitTests/packages.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Castle.Core" version="3.3.3" targetFramework="net45" />
-  <package id="Moq" version="4.5.9" targetFramework="net45" />
-  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
-  <package id="OpenCover" version="4.7.922" targetFramework="net472" />
-  <package id="ReportGenerator" version="4.3.2" targetFramework="net472" />
+  <package id="Castle.Core" version="5.1.1" targetFramework="net472" />
+  <package id="Moq" version="4.20.70" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
+  <package id="OpenCover" version="4.7.1221" targetFramework="net472" />
+  <package id="ReportGenerator" version="5.3.0" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
+  <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
 </packages>
